syntax = "proto3";

package otamgr;

message UpdateRequest {}

message UpdateResponse {}
